--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -25,7 +25,7 @@
             android:id="@+id/btnAdminSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Louer un vélo"
+            android:text="@string/louer_un_v_lo"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:background="@color/colorBackground"/>
