--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -27,33 +27,36 @@
         android:layout_width="49dp"
         android:layout_height="33dp"
         android:src="@drawable/ic_all"
-        android:layout_marginLeft="34dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="167dp"
+        android:layout_marginTop="163dp"
         android:id="@+id/imageView2"
-        tools:ignore="ContentDescription,RtlHardcoded" />
+        tools:ignore="ContentDescription,RtlHardcoded"
+        android:layout_marginLeft="43dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:layout_width="55dp"
         android:layout_height="37dp"
         android:src="@drawable/ic_en"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        android:layout_marginLeft="82dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="163dp"
         android:id="@+id/imageView3"
-        tools:ignore="ContentDescription,RtlHardcoded" />
+        tools:ignore="ContentDescription,RtlHardcoded"
+        app:layout_constraintRight_toLeftOf="@+id/imageView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView2"
+        android:layout_marginLeft="8dp" />
 
     <ImageView
         android:layout_width="49dp"
         android:layout_height="33dp"
         android:src="@drawable/ic_fr"
-        app:layout_constraintLeft_toRightOf="@+id/imageView3"
-        android:layout_marginLeft="74dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="163dp"
-        tools:ignore="ContentDescription,RtlHardcoded" />
+        tools:ignore="ContentDescription,RtlHardcoded"
+        android:layout_marginRight="43dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/imageView" />
 
     <Button
         android:id="@+id/FR"
@@ -61,11 +64,11 @@
         android:layout_height="wrap_content"
         android:text="@string/francais"
         android:onClick="changeToFR"
-        app:layout_constraintLeft_toRightOf="@+id/ENG"
-        android:layout_marginLeft="40dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="217dp"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        android:layout_marginRight="24dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <Button
@@ -75,7 +78,7 @@
         android:text="@string/german"
         android:onClick="changeToALL"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="217dp"
         tools:ignore="RtlHardcoded" />
@@ -90,8 +93,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="217dp"
         app:layout_constraintLeft_toRightOf="@+id/ALL"
-        android:layout_marginLeft="44dp"
-        tools:ignore="RtlHardcoded" />
+        android:layout_marginLeft="40dp"
+        tools:ignore="RtlHardcoded"
+        app:layout_constraintRight_toLeftOf="@+id/FR"
+        android:layout_marginRight="40dp" />
 
 </android.support.constraint.ConstraintLayout>
 </LinearLayout>
