--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
     </android.support.v7.widget.Toolbar>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLanguage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
