--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="com.example.daniel.bikesharing.LoginActivity">
+    tools:context="com.example.daniel.bikesharing.HomeActivity">
 
     <ScrollView
         android:layout_width="0dp"
@@ -48,8 +48,8 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginEnd="64dp"
                 android:layout_marginTop="64dp"
                 android:background="@color/colorButton"
                 android:text="@string/login"
