--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Nom" />
+            android:hint="@string/nom" />
 
         <EditText
             android:id="@+id/txtRegisterFirstname"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Prénom" />
+            android:hint="@string/pr_nom" />
 
         <EditText
             android:id="@+id/txtRegisterEmail"
@@ -54,10 +54,10 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="E-Mail" />
+            android:hint="@string/adresse_mail" />
 
         <Spinner
-            android:id="@+id/spinRegisterTown"
+            android:id="@+id/spinRegisterCanton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -71,7 +71,7 @@
             android:ems="10"
             android:fontFamily="none"
             android:inputType="textPassword"
-            android:hint="Mot de passe" />
+            android:hint="@string/mot_de_passe" />
 
         <EditText
             android:id="@+id/txtRegisterConfPassword"
@@ -80,7 +80,7 @@
             android:ems="10"
             android:fontFamily="none"
             android:inputType="textPassword"
-            android:hint="Confirmer mot de passe" />
+            android:hint="@string/confirmer_le_mot_de_passe" />
 
     </LinearLayout>
 
@@ -93,7 +93,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Valider"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegister" />
