--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -3,11 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_profile"
+        android:title="@string/Profile"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_logout"
-        android:title="@string/action_logout" />
+        android:title="@string/action_logout"
+        app:showAsAction="never" />
 </menu>
