--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -1,21 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".LanguageActivity" >
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolLanguage"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:title="@string/bike_sharing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.Toolbar>
-
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,40 +6,55 @@
     android:layout_height="match_parent"
     tools:context="com.example.daniel.bikesharing.LanguageActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolLanguage"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:title="@string/bike_sharing"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
+    </android.support.v7.widget.Toolbar>
+
     <ImageView
         android:layout_width="49dp"
         android:layout_height="33dp"
         android:src="@drawable/ic_all"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="163dp"
+        android:layout_marginTop="206dp"
         android:id="@+id/imageView2"
         tools:ignore="ContentDescription,RtlHardcoded"
         android:layout_marginLeft="43dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="43dp" />
 
     <ImageView
         android:layout_width="55dp"
-        android:layout_height="37dp"
+        android:layout_height="33dp"
         android:src="@drawable/ic_en"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="163dp"
+        android:layout_marginTop="206dp"
         android:id="@+id/imageView3"
         tools:ignore="ContentDescription,RtlHardcoded"
         app:layout_constraintRight_toLeftOf="@+id/imageView"
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        android:layout_marginLeft="8dp" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <ImageView
         android:layout_width="49dp"
         android:layout_height="33dp"
         android:src="@drawable/ic_fr"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="163dp"
+        android:layout_marginTop="206dp"
         tools:ignore="ContentDescription,RtlHardcoded"
         android:layout_marginRight="43dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageView"
+        android:layout_marginEnd="43dp" />
 
     <Button
         android:id="@+id/FR"
@@ -64,10 +62,10 @@
         android:layout_height="wrap_content"
         android:text="@string/francais"
         android:onClick="changeToFR"
+        android:layout_marginTop="256dp"
+        android:layout_marginEnd="24dp"
+        android:background="@color/colorBackground"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="217dp"
-        tools:ignore="RtlHardcoded"
-        android:layout_marginRight="24dp"
         app:layout_constraintRight_toRightOf="parent" />
 
 
@@ -77,11 +75,11 @@
         android:layout_height="wrap_content"
         android:text="@string/german"
         android:onClick="changeToALL"
+        android:layout_marginTop="256dp"
+        android:layout_marginStart="24dp"
+        android:background="@color/colorBackground"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="217dp"
-        tools:ignore="RtlHardcoded" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/ENG"
@@ -91,12 +89,11 @@
         android:text="@string/english"
         android:onClick="changeToEN"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="217dp"
+        android:layout_marginTop="256dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:background="@color/colorBackground"
         app:layout_constraintLeft_toRightOf="@+id/ALL"
-        android:layout_marginLeft="40dp"
-        tools:ignore="RtlHardcoded"
-        app:layout_constraintRight_toLeftOf="@+id/FR"
-        android:layout_marginRight="40dp" />
+        app:layout_constraintRight_toLeftOf="@+id/FR" />
 
 </android.support.constraint.ConstraintLayout>
-</LinearLayout>
