--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/louer_un_v_lo"
+            android:textSize="18sp"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:background="@color/colorBackground"/>
@@ -35,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textSize="18sp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@color/colorBackground"
