--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -17,6 +17,18 @@
         android:layout_height="wrap_content">
     </android.support.v7.widget.Toolbar>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabTownAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:tint="#fff"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@android:drawable/ic_input_add"
+        android:scaleType="center"/>
+
     <LinearLayout
         android:id="@+id/linearLayoutHeader"
         android:layout_width="match_parent"
