--- a/app/src/main/res/layout/activity_place_infos.xml
+++ b/app/src/main/res/layout/activity_place_infos.xml
@@ -18,7 +18,6 @@
         android:id="@+id/txtPlaceName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ici_le_nom_du_lieu"
         android:textSize="24sp"
         android:layout_marginTop="24dp"
         android:layout_gravity="center"
@@ -58,7 +57,6 @@
                 android:id="@+id/txtPlaceAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/l_adresse_ici"
                 android:gravity="end"/>
         </LinearLayout>
 
@@ -81,8 +79,7 @@
                 android:id="@+id/txtPlaceDispoBikes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="@string/ici_le_nombre_de_v_los" />
+                android:gravity="end" />
         </LinearLayout>
 
         <LinearLayout
@@ -104,7 +101,6 @@
                 android:id="@+id/txtPlaceDispoSlots"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ici_le_nombre_de_places_libres"
                 android:gravity="end" />
         </LinearLayout>
     </LinearLayout>
